--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -112,9 +112,9 @@ MediaWiki 1.27:
 MediaWiki 1.26:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.26.4'
+    secure_version: '1.27.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.26\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2016-August/000195.html'
+    cve: 'MediaWiki 1.26 is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.25:
