Added support for WordPress plugin quiz-master-next

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1827,3 +1827,11 @@ WordPress plugin multisite-post-duplicator:
     cve: 'https://security.dxw.com/advisories/csrf-vulnerability-in-multisite-post-duplicator-could-allow-an-attacker-to-do-almost-anything-an-admin-user-can-do/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin quiz-master-next:
+  1:
+    location: ['/wp-content/plugins/quiz-master-next/readme.txt']
+    secure_version: '4.7.9'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://security.dxw.com/advisories/csrfstored-xss-in-quiz-and-survey-master-formerly-quiz-master-next-allows-unauthenticated-attackers-to-do-almost-anything-an-admin-can/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
