--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1851,3 +1851,11 @@ WordPress plugin copy-me:
     cve: 'https://security.dxw.com/advisories/copy-me-vulnerable-to-csrf-allowing-unauthenticated-attacker-to-copy-posts/ http://lists.openwall.net/full-disclosure/2016/12/22/3'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin image-slider-widget:
+  1:
+    location: ['/wp-content/plugins/image-slider-widget/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://security.dxw.com/advisories/arbitrary-file-deletion-vulnerability-in-image-slider-allows-authenticated-users-to-delete-files/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
