--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,5 @@ install: 'pip install -r requirements.lst'
 before_script: "sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm"
 script: python tests.py
 notifications:
-  irc:
-    channels:
-      - 'irc.nerv.fi#pyfiscan'
-    skip_join: true
+  email:
+     - henri+travis@nerv.fi
