--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1901,3 +1901,11 @@ WordPress plugin tevolution:
     cve: 'https://cxsecurity.com/issue/WLB-2016120166'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin iwp-client:
+  1:
+    location: ['/wp-content/plugins/iwp-client/readme.txt']
+    secure_version: '1.6.3.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160803-0004 https://sumofpwn.nl/advisory/2016/infinitewp_client_wordpress_plugin_unauthenticated_php_object_injection_vulnerability.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
