--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1926,3 +1926,11 @@ WordPress plugin user-access-manager:
     cve: 'OVE-20160712-0025 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_vulnerability_in_user_access_manager_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-mail:
+  1:
+    location: ['/wp-content/plugins/wp-mail/readme.txt']
+    secure_version: '1.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://cjc.im/advisories/0006/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
