--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1966,3 +1966,11 @@ WordPress plugin admin-custom-login:
     cve: 'OVE-20160712-0002 https://sumofpwn.nl/advisory/2016/admin_custom_login_wordpress_plugin_affected_by_persistent_cross_site_scripting_via_logo_url_field.html OVE-20160712-0003 https://sumofpwn.nl/advisory/2016/admin_custom_login_wordpress_plugin_custom_login_page_affected_by_persistent_cross_site_scripting.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin trust-form:
+  1:
+    location: ['/wp-content/plugins/trust-form/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160712-0018 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_trust_form_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
