--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2009,3 +2009,11 @@ WordPress plugin global-content-blocks:
     cve: 'OVE-20160712-0031 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_global_content_blocks_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin slideshow-gallery:
+  1:
+    location: ['/wp-content/plugins/slideshow-gallery/readme.txt']
+    secure_version: 'N/A'  # TODO tested in 1.6.3 latest is 1.6.4
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160714-0016 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_tribulant_slideshow_galleries_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
