--- a/yamls/wordpress-themes.yml
+++ b/yamls/wordpress-themes.yml
@@ -11,6 +11,6 @@ WordPress theme atahualpa:
     location: ['/wp-content/themes/atahualpa/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160724-0003 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_atahualpa_wordpress_theme.html'
+    cve: 'OVE-20160724-0003 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_atahualpa_wordpress_theme.html OVE-20160724-0004 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_atahualpa_wordpress_theme.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
