--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2042,3 +2042,11 @@ WordPress plugin alpine-photo-tile-for-instagram:
     cve: 'OVE-20160725-0010 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_alpine_phototile_for_instagram_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin vaultpress:
+  1:
+    location: ['/wp-content/plugins/vaultpress/readme.txt']
+    secure_version: '1.8.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160728-0002 https://sumofpwn.nl/advisory/2016/vaultpress___remote_code_execution_via_man_in_the_middle_attack.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
