--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2074,3 +2074,11 @@ WordPress plugin user-login-log:
     cve: 'OVE-20160724-0011 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_vulnerability_in_user_login_log_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin contact-form-manager:
+  1:
+    location: ['/wp-content/plugins/contact-form-manager/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160718-0003 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery___cross_site_scripting_in_contact_form_manager_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
