--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2082,3 +2082,11 @@ WordPress plugin contact-form-manager:
     cve: 'OVE-20160718-0003 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery___cross_site_scripting_in_contact_form_manager_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin contact-form-plugin:
+  1:
+    location: ['/wp-content/plugins/contact-form-plugin/readme.txt']
+    secure_version: '4.0.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160712-0042 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_vulnerability_in_contact_form_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
