--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2098,3 +2098,11 @@ WordPress plugin rockhoist-badges:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6102 http://www.vapidlabs.com/advisory.php?v=176'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin anyvar:
+  1:
+    location: ['/wp-content/plugins/anyvar/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6103 http://www.vapidlabs.com/advisory.php?v=177'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
