--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2130,3 +2130,11 @@ WordPress plugin mail-masta:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6570 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6571 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6572 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6573 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6574 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6575 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6576 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6577 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6578'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin membership-simplified-for-oap-members-only:
+  1:
+    location: ['/wp-content/plugins/membership-simplified-for-oap-members-only/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002009 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002010 http://www.vapidlabs.com/advisory.php?v=188'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
