--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2146,3 +2146,11 @@ WordPress plugin spider-event-calendar:  # CVE requested 2017-04-12 #318821
     cve: 'http://lists.openwall.net/full-disclosure/2017/04/09/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wordpress-firewall-2:
+  1:
+    location: ['/wp-content/plugins/wordpress-firewall-2/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://security.dxw.com/advisories/csrfstored-xss-in-wordpress-firewall-2-allows-unauthenticated-attackers-to-do-almost-anything-an-admin-can/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
