--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2154,3 +2154,15 @@ WordPress plugin wordpress-firewall-2:
     cve: 'https://security.dxw.com/advisories/csrfstored-xss-in-wordpress-firewall-2-allows-unauthenticated-attackers-to-do-almost-anything-an-admin-can/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2017-2135 12.0.2
+# CVE-2017-2136 12.0.5
+# CVE-2017-2147 12.0.5
+# CVE-2017-XXXX 12.0.6  https://wp-statistics.com/change-log/
+WordPress plugin wp-statistics:
+  1:
+    location: ['/wp-content/plugins/wp-statistics/readme.txt']
+    secure_version: '12.0.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://wp-statistics.com/change-log/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
