--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2190,3 +2190,11 @@ WordPress plugin adsense-click-fraud-monitoring:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-3998 http://www.vapid.dhs.org/advisory.php?v=119'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin gift-certificate-creator:
+  1:
+    location: ['/wp-content/plugins/gift-certificate-creator/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002017 http://www.vapidlabs.com/advisory.php?v=191'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
