--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -103,9 +103,9 @@ ownCloud 9.0:
 ownCloud 8.2:
   1:
     location: ['/version.php']
-    secure_version: '8.2.9'
+    secure_version: '9.1.3'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.2\.[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oC-SA-2017-001 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5865 https://owncloud.org/security/advisory/?id=oC-SA-2017-002 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5866 https://owncloud.org/security/advisory/?id=oC-SA-2017-003 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5867'
+    cve: 'ownCloud 8.2 is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 8.1:
