--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1085,6 +1085,11 @@ WordPress plugin paid-memberships-pro:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2014-2340 3.1.1
+# CVE-2014-8603
+# CVE-2014-8604
+# CVE-2014-8605
+# CVE-2014-8606
+# CVE-2014-8607
 WordPress plugin xcloner-backup-and-restore:
   1:
     location: ['/wp-content/plugins/xcloner-backup-and-restore/readme.txt']
@@ -2237,5 +2242,13 @@ WordPress plugin easy-team-manager:
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002023 http://www.vapidlabs.com/advisory.php?v=194'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin accesspress-social-icons:
+  1:
+    location: ['/wp-content/plugins/accesspress-social-icons/readme.txt']
+    secure_version: '1.6.8'  # TODO: fix should be verified
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.defensecode.com/advisories/DC-2017-03-005_WordPress_AccessPress_Social_Icons_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
