--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2249,6 +2249,14 @@ WordPress plugin accesspress-social-icons:
     location: ['/wp-content/plugins/accesspress-social-icons/readme.txt']
     secure_version: '1.6.8'  # TODO: fix should be verified
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.defensecode.com/advisories/DC-2017-03-005_WordPress_AccessPress_Social_Icons_Plugin_Advisory.pdf'
+    cve: 'http://www.defensecode.com/advisories/DC-2017-03-005_WordPress_AccessPress_Social_Icons_Plugin_Advisory.pdf'  # 2017-07-04 asked founder to request CVE
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin ultimate-form-builder-lite:
+  1:
+    location: ['/wp-content/plugins/ultimate-form-builder-lite/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.defensecode.com/advisories/DC-2017-01-027_WordPress_Ultimate_Form_Builder_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
