--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2171,6 +2171,7 @@ WordPress plugin wordpress-firewall-2:
 # TODO          12.0.6 "Fixed: Additional XSS fixes, thanks Plugin Vulnerabilities Team."
 # TODO          12.0.8 https://blog.sucuri.net/2017/06/sql-injection-vulnerability-wp-statistics.html
 # TODO          12.0.9 "Fixed: XSS issue with agent and ip in visitors page, Thanks Ryan Dewhurst from Dewhurst Security Team."
+# CVE-2017-10991 TODO https://lorexxar.cn/2017/07/07/WordPress%20WP%20Statistics%20authenticated%20xss%20Vulnerability%28WP%20Statistics%20-=12.0.9%29/
 WordPress plugin wp-statistics:
   1:
     location: ['/wp-content/plugins/wp-statistics/readme.txt']
@@ -2265,5 +2266,13 @@ WordPress plugin ultimate-form-builder-lite:
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'http://www.defensecode.com/advisories/DC-2017-01-027_WordPress_Ultimate_Form_Builder_Plugin_Advisory.pdf'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin event-calendar-wd:
+  1:
+    location: ['/wp-content/plugins/event-calendar-wd/readme.txt']
+    secure_version: '1.0.94'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-2224'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
